tests/NormalTests/paczka1/small_fuzzy/46256876.err
Error in line 6: XLM A613 80,7
Error in line 2: 49f S158 23,4
Error in line 11: XLM S158 150,1
